# rel8

./: Play.hs  Play2.hs  Sketch.hs  rel8.cabal
Control/Monad/: Rel8.hs
Rel8/: IO.hs
Rel8/Internal/: Aggregate.hs  Expr.hs  Operators.hs  Order.hs  Table.hs  Types.hs
lib/: Rel8.hs
lib/Rel8/: Internal.hs
lib/Rel8/Internal/: Aggregation.hs  AggregationOptions.hs  BaseTable.hs  C.hs  ColumnSchema.hs  Expr.hs  Lim.hs  Query.hs  Select.hs  Table.hs  TaggedExpr.hs  Transport.hs
