name:                rel8
version:             0.1.0.0
synopsis:            A type-safe, expressive and concise API for querying relational databases using Opaleye
license:             BSD3
license-file:        LICENSE
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
-- copyright:           
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
Tested-With: GHC == 8.0.2

library
  exposed-modules:     Rel8, Rel8.Internal
  other-modules:       Rel8.Internal.Table
  build-depends:       aeson
                     , base >=4.9 && <4.11
                     , bytestring
                     , contravariant
                     , exceptions
                     , free
                     , mtl
                     , one-liner >=0.9 && <0.10
                     , opaleye >= 0.6.0.0 && < 0.7
                     , postgresql-simple
                     , profunctors >=5.2 && <5.3
                     , resourcet >= 1.1.8.1
                     , scientific
                     , monad-control >= 1.0.1.0 && < 1.1
                     , streaming >=0.1 && <0.3
                     , streaming-postgresql-simple
                     , tagged >=0.8 && <0.9
                     , text
                     , time
                     , transformers
                     , uuid
                     , vector
                     , lens
                     , adjunctions
  hs-source-dirs:    lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-redundant-constraints -fwarn-incomplete-uni-patterns
